Add a possibility to use (un)authorized http proxy